fixed z-index across components
added comment with z-index ranges for components.
Generally, each component gets a range of 1000 and things inside stay
within that range

--- a/app/assets/stylesheets/components/_page_headers.scss
+++ b/app/assets/stylesheets/components/_page_headers.scss
@@ -1,3 +1,4 @@
+//z-index: 6000-6900
 @media (min-width: $small-screen+1) {
   .PageHeader-appBar {
     margin-right: ($grid-increment*4);
@@ -26,7 +27,9 @@
   padding-left: 8px;
 }
 
+//main div in PageHeader react component
 #mainHeader {
+  z-index: 6000;
   height: 64px;
 }
 
