--- a/app/assets/stylesheets/containers/_main.scss
+++ b/app/assets/stylesheets/containers/_main.scss
@@ -1,3 +1,4 @@
+//z-index: 2000-2999
 @media (max-width: $small-screen) {
   .MainContainer, .MainContainer-contentHeader {
     left: 0;
@@ -25,7 +26,7 @@
   top: 0;
   bottom: 100%;
   background-color: $body-bg;
-  z-index: 50;
+  z-index: 2000;
 }
 
 .MainContainer-contentHeader {
